# sdk-api-py

./: .gitignore  .safety-project.ini  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.env.example
.github/workflows/: deploy.yml
docs/: application.md  capture_listeners.md  client.md  commit_and_upload.md  development - contributing.md  features.md  index.md  request_listeners.md
docs/api_reference/: AppCache.md  Application.md  Client.md  Endpoint.md  Errors.md  File.md  Response.md  create_config_file.md
docs/api_reference/data_classes/: AppData.md  BackupData.md  FileInfo.md  LogsData.md  StatisticsData.md  StatusData.md  UploadData.md  UserData.md
docs/commands_csv/: cli.csv
docs/commands_csv/app/: app.csv  arguments.csv  options.csv
docs/commands_csv/app/commit/: arguments.csv
docs/commands_csv/app/delete/: options.csv
docs/commands_csv/app/file-create/: options.csv
docs/commands_csv/app/file-read/: arguments.csv
docs/commands_csv/create-config-file/: arguments.csv  options.csv
docs/commands_csv/upload/: options.csv
docs/user_guide/: getting_api_key.md
docs/user_guide/cli/: introduction.md  managing_applications.md  storing_your_token.md
docs/user_guide/cli/commands/: app_list.md  create_config_file.md  statistics.md  upload.md
docs/user_guide/cli/commands/app/: backup.md  commit.md  data.md  delete.md  file-create.md  file-delete.md  file-list.md  file-read.md  index.md  logs.md  restart.md  start.md  status.md  stop.md
docs/user_guide/wrapper/: application.md  application_cache.md  capture_listeners.md  client.md  commit_and_upload.md  managing_application.md  managing_files.md  request_listeners.md
examples/: capture_listener.py  client_example.py  creating_config_file.py  get_app_list.py  obtaining_app.py  request_listener.py
examples/app_cache/: accessing_application_cache.py  avoid_update_cache.py  clear_cache.py  update_cache.py
examples/app_data/: with_application.py  with_cli.sh  with_client.py
examples/app_list/: with_cli.sh
examples/backup/: with_application.py  with_cli.sh  with_client.py
examples/commit/: with_application.py  with_cli.sh  with_client.py
examples/create_file/: with_application.py  with_cli.sh  with_client.py
examples/creating_config_file/: with_cli.sh  with_wrapper.py
examples/custom_domain/: with_application.py  with_cli.sh  with_client.py
examples/delete_file/: with_application.py  with_cli.sh  with_client.py
examples/deleting_application/: with_application.py  with_cli.sh  with_client.py
examples/deploy_list/: with_application.py  with_cli.sh  with_client.py
examples/deployments/create_integration/: with_application.py  with_client.py
examples/deployments/current_integration/: with_application.py  with_client.py
examples/deployments/deploy_list/: with_application.py  with_client.py
examples/domain_analytics/: with_application.py  with_cli.sh  with_client.py
examples/env/delete_env/: with_app.py  with_client.py
examples/env/get_env/: with_app.py  with_client.py
examples/env/overwrite_env/: with_app.py  with_client.py
examples/env/set_env/: with_app.py  with_client.py
examples/file_list/: with_application.py  with_cli.sh  with_client.py
examples/getting_application_status/: with_application.py  with_cli.sh  with_client.py
examples/getting_logs/: with_application.py  with_cli.sh  with_client.py
examples/github_integration/: with_application.py  with_cli.sh  with_client.py
examples/moving_files/: with_application.py  with_client.py
examples/obtaining_app/: with_cli.sh
examples/read_file/: with_application.py  with_cli.sh  with_client.py
examples/restarting_app/: with_application.py  with_cli.sh  with_client.py
examples/snapshots/: with_application.py  with_client.py
examples/squarecloud_statistics/: with_cli.sh  with_client.py
examples/starting_app/: with_application.py  with_cli.sh  with_client.py
examples/stopping_app/: with_application.py  with_cli.sh  with_client.py
examples/upload_app/: with_cli.sh  with_client.py
scripts/: __init__.py  clear_test_apps.py
squarecloud/: __init__.py  app.py  client.py  data.py  errors.py  file.py  http.py  listener.py  listeners.py  logging.py  logs.py  payloads.py  square.py  types.py  utils.py
squarecloud/_internal/: constants.py  decorators.py
squarecloud/cli/: __init__.py  app.py  files.py  main.py
squarecloud/http/: __init__.py  endpoints.py  http_client.py  router.py
squarecloud/listeners/: __init__.py  capture_listener.py  request_listener.py
tests/: __init__.py  conftest.py  test_app.py  test_app_data.py  test_capture_listeners.py  test_files.py  test_request_listeners.py  test_upload_app.py
