[tool.poetry]
name = 'squarecloud-api'
version = '3.7.2'
description = 'SquareCloud API wrapper'
authors = ['Robert Nogueira <robertlucasnogueira@gmail.com>']
repository = 'https://github.com/squarecloudofc/wrapper-api-py'
documentation = 'https://docs.squarecloud.app/sdks/py'
license = 'MIT License'
readme = 'README.md'
packages = [{ include = 'squarecloud' }]

[tool.poetry.dependencies]
python = '^3.9'
aiohttp = "3.10.2"
taskipy = "^1.13.0"
pydantic = {version = "^2.8.2", optional = true}
typing-extensions = "^4.12.2"

[tool.poetry.extras]
pydantic = ["pydantic"]

[tool.poetry.group.dev.dependencies]
pytest = '^7.4.3'
pytest-cov = '^4.1.0'
blue = '^0.9.1'
isort = '^5.12.0'
pytest-asyncio = '^0.21.1'
pre-commit = '^3.3.3'
ruff = '^0.0.289'
memory-profiler = '^0.61.0'
requests = '^2.31.0'
pytest-rerunfailures = "^13.0"
python-dotenv = "^1.0.1"
rich = "^13.7.1"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.pytest.ini_options]
asyncio_mode = 'auto'
markers = [
    'app',
    'app_data',
    'listeners',
    'capture_listener',
    'request_listener',
    'files',
    'upload',
]

[tool.isort]
profile = 'black'
line_length = 79

[tool.taskipy.tasks]
lint = 'isort . && blue . && ruff .'
pre_test = 'task lint'
test = 'pytest -vv -s --reruns 5 --only-rerun TooManyRequests --reruns-delay 90 -x --cov=tests tests'
post_test = 'coverage html'
publish-test = 'poetry publish -r pypi-test --build'
install-test = 'pip install -i https://test.pypi.org/pypi/ --extra-index-url https://pypi.org/simple --upgrade squarecloud-api'
clear-test-apps = 'python -m scripts.clear_test_apps'

[tool.ruff]
line-length = 79
exclude = ['env']

[tool.ruff.per-file-ignores]
'__init__.py' = ['F401']
